// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayoutListItem /> with additional className matches its snapshot 1`] = `
<li
  className="y-layoutList--item TEST_CLASSNAME"
/>
`;

exports[`<LayoutListItem /> with child content matches its snapshot 1`] = `
<li
  className="y-layoutList--item"
>
  list item content
</li>
`;

exports[`<LayoutListItem /> without props matches its snapshot 1`] = `
<li
  className="y-layoutList--item"
/>
`;
